# smart-catalog-reader

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: KAGGLE_ANALYSIS_GUIDE.md
notebooks/: boticario_natura_analysis.ipynb  kernel-metadata.json
scripts/: process_all_catalogs.sh
src/catalog_extractor/: __init__.py  container.py  main.py
src/catalog_extractor/application/: __init__.py  extraction_service.py  validator.py
src/catalog_extractor/config/: __init__.py  settings.py
src/catalog_extractor/domain/: __init__.py  interfaces.py  models.py
src/catalog_extractor/infrastructure/: __init__.py  llm_client.py  normalizer.py  pdf_processor.py  storage.py
tests/: __init__.py  test_normalizer.py  test_validator.py
