[project]
name = "smart-catalog-reader"
version = "0.1.0"
description = "Extract product data from cosmetics catalogs using AI vision"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-generativeai>=0.8.0",
    "pdf2image>=1.17.0",
    "Pillow>=10.0.0",
    "backoff>=2.2.1",
    "thefuzz>=0.22.1",
    "python-Levenshtein>=0.25.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "dependency-injector>=4.41.0",
    "structlog>=24.0.0",
    "tenacity>=8.2.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[project.scripts]
catalog-extractor = "catalog_extractor.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/catalog_extractor"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
